--- a/biodata.html
+++ b/biodata.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Nuarita Tri Kartika</h1>
-        <img src="Nuarita.png" height="180" width="140">
+        <img src="Nuarita_.jpg" height="180" width="140">
         <h2>Tentang Saya</h2>
         <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Saya juga memiliki hobi fotografi, berenang, dan eksplor hal-hal baru.</p>
         <h2>Keahlian Saya</h2>
@@ -19,5 +19,6 @@
         </ul>
         <h2> Kontak Saya</h2>
         <p><a href="https://instagram.com/nuarita_kartika?igshid=YmMyMTA2M2Y=">Instagram</a></p>
+        <p><a href="file:///E:/HTML/portofolio.html">Portofolio</a></p>
     </body>
 </html>
