penambahan pada portofolio

--- a/portofolio.html
+++ b/portofolio.html
@@ -2,9 +2,9 @@
     <body>
         <h1>TUGAS PORTOFOLIO</h1>
         <img src="Nuarita_.jpg" height="180" width="140">
-        <h2>Nuarita Tri Kartika</h2>
         <h2>Data Pribadi</h2>
         <ul>
+            <li>Nama : Nuarita Tri Kartika</li>
             <li>Tempat Lahir : Sidoarjo</li>
             <li>Tanggal Lahir : 26 Januari 2001</li>
             <li>Agama : Islam</li>
