--- a/biodata.html
+++ b/biodata.html
@@ -12,7 +12,7 @@
         </ol>
         <h2>Pendidikan Saya</h2>
         <ul>
-            <li>2007-2013       : SDN Purwotengah 2 Mojokerto</li>
+            <li>2007-2013       : SDN Purwotengah 2 Kota Mojokerto</li>
             <li>2013-2016       : SMPN 2 Mojokerto</li>
             <li>2016-2019       : SMAN 1 Sooko Mojokerto</li>
             <li>2019-Sekarang   : S1 Teknik Industri UPN Veteran Jawa Timur</li>
