--- a/biodata.html
+++ b/biodata.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1 align="center">Nuarita Tri Kartika</h1>
-        <img src="Nuarita_.jpg" height="180" width="140">
+        <center><img src="Nuarita_.jpg" height="180" width="140"></center>
         <h2>Tentang Saya</h2>
         <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Saya juga memiliki hobi fotografi, berenang, dan eksplor hal-hal baru.</p>
         <h2>Keahlian Saya</h2>
