perubahan dan penambahan css

--- a/portofolio.html
+++ b/portofolio.html
@@ -1,8 +1,9 @@
 <html>
     <body>
-        <h1>TUGAS PORTOFOLIO</h1>
-        <img src="Nuarita_.jpg" height="180" width="140">
-        <h2>Data Pribadi</h2>
+        <link rel="stylesheet" href="./styleportofolio.css">
+        <h1 align="center" class="tugas">TUGAS PORTOFOLIO</h1>
+        <center><img class="foto" src="Nuarita_.jpg" height="180" width="140"></center>
+        <h2 class="data">Data Pribadi</h2>
         <ul>
             <li>Nama : Nuarita Tri Kartika</li>
             <li>Tempat Lahir : Sidoarjo</li>
@@ -11,61 +12,94 @@
             <li>Jenis Kelamin : Perempuan</li>
             <li>Status : Mahasiswa</li>
         </ul>
-        <h2>Hobi Saya</h2>
-        <ul>
-            <li>Travelling</li>
-            <li>Berenang</li>
-            <li>Bersepeda</li>
-            <li>Fotografi</li>
-        </ul>
-        <h2>Kemampuan Bahasa</h2>
-        <ul>
-            <li>Bahasa Indonesia</li>
-            <li>Bahasa Inggris</li>
-        </ul>
-        <h2>Karakter</h2>
-        <ol>
-            <li>Disiplin</li>
-            <li>Bertanggung Jawab</li>
-            <li>Baik</li>
-            <li>Sopan</li>
-            <li>Suka akan hal baru</li>
-            <li>Jujur</li>
-        </ol>
-        <h2>Pengalaman Saya</h2>
-        <table border="1">
+        <head>
+            <style>
+            table, tr, td, th{
+                border: 2px solid darkblue
+            }
+            </style>
+        </head>
+        <h2 class="hobi">Hobi Saya</h2>
+        <table>
             <tr>
-                <th>No</th>
+                <th>Hobi</th>
+            </tr>
+            <tr>
+                <td>Travelling</td>
+            </tr>
+            <tr>
+                <td>Berenang</td>
+            </tr>
+            <tr>
+                <td>Bersepeda</td>
+            </tr>
+            <tr>
+                <td>Fotografi</td>
+            </tr>
+            </table>
+        <h2 class="kemampuan">Kemampuan Bahasa</h2>
+        <table>
+        <tr>
+            <th>Bahasa</th>
+        </tr>
+        <tr>
+            <td>Bahasa Indonesia</td>
+        </tr>
+        <tr>
+            <td>Bahasa Inggris</td>
+        </tr>
+        </table>
+        <h2 class="karakter">Karakter Saya</h2>
+        <table>
+        <tr>
+            <th>Karakter</th>
+        </tr>
+        <tr>
+            <td>Disiplin</td>
+        </tr>
+        <tr>
+            <td>Bertanggung Jawab</td>
+        </tr>
+        <tr>
+            <td>Baik</td>
+        </tr>
+        <tr>
+            <td>Sopan</td>
+        </tr>
+        <tr>
+            <td>Suka akan hal baru</td>
+        </tr>
+        <tr>
+            <td>Jujur</td>
+        </tr>
+        </table>
+        <h2 class="pengalaman">Pengalaman Organisasi Saya</h2>
+        <table>
+            <tr>
                 <th>Masa Organisasi</th>
                 <th>Pengalaman Organisasi</th>
             </tr>
             <tr>
-                <td>1</td>
                 <td>2018-2019</td>
                 <td>Pengurus Ekstrakurikuler Pikasso SMAN 1 Sooko Mojokerto</td>
             </tr>
             <tr>
-                <td>2</td>
                 <td>2021-2022</td>
                 <td>Pengurus UKM Renang UPN Veteran Jawa Timur</td>
             </tr>
             <tr>
-                <td>3</td>
                 <td>2021</td>
                 <td>Kepanitiaan Webinar UKM Renang UPN Veteran Jawa Timur</td>
             </tr>
             <tr>
-                <td>4</td>
                 <td>2021</td>
                 <td>Kepanitiaan Friendship Camp UKM Renang UPN Veteran Jawa Timur</td>
             </tr>
             <tr>
-                <td>5</td>
                 <td>2021</td>
                 <td>Kepanitiaan Majalah "Just TI" Jurusan Teknik Industri UPN Veteran Jawa Timur</td>
             </tr>
             <tr>
-                <td>6</td>
                 <td>2021</td>
                 <td>Kepanitiaan Studi Ekskursi Teknik Industri UPN Veteran Jawa Timur</td>
             </tr>
