--- a/biodata.html
+++ b/biodata.html
@@ -1,23 +1,24 @@
 <html>
     <body>
-        <h1 align="center">Nuarita Tri Kartika</h1>
-        <center><img src="Nuarita_.jpg" height="180" width="140"></center>
-        <h2>Tentang Saya</h2>
-        <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Saya juga memiliki hobi fotografi, berenang, dan eksplor hal-hal baru.</p>
-        <h2>Keahlian Saya</h2>
+        <link rel="stylesheet" href="./style.css">
+        <h1 align="center" class="judul"> Biodata Nuarita Tri Kartika</h1>
+        <center><img class="gambar" src="Nuarita_.jpg" height="180" width="140"></center>
+        <h2 align="center" class="tentang">Tentang Saya</h2>
+        <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri.</p>
+        <h2 align="center" class="keahlian">Keahlian Saya</h2>
         <ol>
             <li>Microsoft Office</li>
             <li>Canva</li>
             <li>Filmora</li>
         </ol>
-        <h2>Pendidikan Saya</h2>
-        <ul>
+        <h2 align="center" class="pendidikan">Pendidikan Saya</h2>
+        <ul style="list-style-type :square">
             <li>2007-2013       : SDN Purwotengah 2 Kota Mojokerto</li>
             <li>2013-2016       : SMPN 2 Mojokerto</li>
             <li>2016-2019       : SMAN 1 Sooko Mojokerto</li>
             <li>2019-Sekarang   : S1 Teknik Industri UPN Veteran Jawa Timur</li>
         </ul>
-        <h2> Kontak Saya</h2>
+        <h2 align="center" class="kontak"> Kontak Saya</h2>
         <p><a href="https://instagram.com/nuarita_kartika?igshid=YmMyMTA2M2Y=">Instagram</a></p>
         <p><a href="file:///E:/HTML/portofolio.html">Portofolio</a></p>
     </body>
