--- a/portofolio.html
+++ b/portofolio.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+        <a href="index.html">Biodata</a>
+        <a href="">Portofolio</a>
         <link rel="stylesheet" href="./styleportofolio.css">
         <h1 align="center" class="tugas">TUGAS PORTOFOLIO</h1>
         <center><img class="foto" src="Nuarita_.jpg" height="180" width="140"></center>
