ubah portofolio dan biodata

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <div class="nav">
         <ul>
-            <li><a href="">Biodata</a></li>
-            <li><a href="portofolio.html">Portofolio</a></li>
+            <li><a href="">biodata</a></li>
+            <li><a href="portofolio.html">portofolio</a></li>
         </ul>
         </div>
 
