perubahan pada index dan portofolio juga tampilannya

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+    <link rel="stylesheet" href="./style.css">
     <style>
         .nav ul {
           list-style-type: none;
@@ -30,12 +31,11 @@
 
         <div class="nav">
         <ul>
-            <li><a href="">biodata</a></li>
-            <li><a href="portofolio.html">portofolio</a></li>
+            <li><a href="">Biodata</a></li>
+            <li><a href="portofolio.html">Portofolio</a></li>
         </ul>
         </div>
 
-        <link rel="stylesheet" href="./style.css">
         <h1 align="center" class="judul"> Biodata Nuarita Tri Kartika</h1>
         <center><img class="gambar" src="Nuarita_.jpg" height="180" width="140"></center>
         <h2 align="center" class="tentang">Tentang Saya</h2>
