penambahan dan perubahan background

--- a/portofolio.html
+++ b/portofolio.html
@@ -2,6 +2,16 @@
     <head>
     <link rel="stylesheet" href="./styleportofolio.css">
     <style>
+        body{
+            background-image: url(./Halaman\ Website.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+            height: 100%;
+        }
+    </style>
+    <style>
         .nav ul {
           list-style-type: none;
           margin: 0;
@@ -36,9 +46,9 @@
         </ul>
         </div>
 
-        <h1 align="center" class="tugas">TUGAS PORTOFOLIO</h1>
+        <h1 align="center" class="tugas">PORTOFOLIO</h1>
         <center><img class="foto" src="Nuarita_.jpg" height="180" width="140"></center>
-        <h2 class="data">Data Pribadi</h2>
+        <h2 align="center" class="data">Data Pribadi</h2>
         <ul>
             <li>Nama : Nuarita Tri Kartika</li>
             <li>Tempat Lahir : Sidoarjo</li>
@@ -50,11 +60,11 @@
         <head>
             <style>
             table, tr, td, th{
-                border: 2px solid darkblue
+                border: 2px solid rgb(0, 0, 0)
             }
             </style>
         </head>
-        <h2 class="hobi">Hobi Saya</h2>
+        <h2 align="center" class="hobi">Hobi Saya</h2>
         <table>
             <tr>
                 <th>Hobi</th>
@@ -72,7 +82,7 @@
                 <td>Fotografi</td>
             </tr>
             </table>
-        <h2 class="kemampuan">Kemampuan Bahasa</h2>
+        <h2 align="center" class="kemampuan">Kemampuan Bahasa</h2>
         <table>
         <tr>
             <th>Bahasa</th>
@@ -84,7 +94,7 @@
             <td>Bahasa Inggris</td>
         </tr>
         </table>
-        <h2 class="karakter">Karakter Saya</h2>
+        <h2 align="center" class="karakter">Karakter Saya</h2>
         <table>
         <tr>
             <th>Karakter</th>
@@ -108,7 +118,7 @@
             <td>Jujur</td>
         </tr>
         </table>
-        <h2 class="pengalaman">Pengalaman Organisasi Saya</h2>
+        <h2 align="center" class="pengalaman">Pengalaman Organisasi Saya</h2>
         <table>
             <tr>
                 <th>Masa Organisasi</th>
