--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <head>
     <link rel="stylesheet" href="./style.css">
     <style>
+      body{
+          background-image: url(./Halaman\ Website.png);
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-attachment: fixed;
+          height: 100%;
+      }
+    </style>
+    <style>
         .nav ul {
           list-style-type: none;
           margin: 0;
@@ -36,22 +46,22 @@
         </ul>
         </div>
 
-        <h1 align="center" class="judul"> Biodata Nuarita Tri Kartika</h1>
+        <h1 align="center" class="judul"> Biodata</h1>
         <center><img class="gambar" src="Nuarita_.jpg" height="180" width="140"></center>
         <h2 align="center" class="tentang">Tentang Saya</h2>
         <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri.</p>
         <h2 align="center" class="keahlian">Keahlian Saya</h2>
         <ol>
-            <li>Microsoft Office</li>
-            <li>Canva</li>
-            <li>Filmora</li>
+          <li>Microsoft Office</li>
+          <li>Canva</li>
+          <li>Filmora</li>
         </ol>
         <h2 align="center" class="pendidikan">Pendidikan Saya</h2>
         <ul style="list-style-type :square">
-            <li>2007-2013       : SDN Purwotengah 2 Kota Mojokerto</li>
-            <li>2013-2016       : SMPN 2 Mojokerto</li>
-            <li>2016-2019       : SMAN 1 Sooko Mojokerto</li>
-            <li>2019-Sekarang   : S1 Teknik Industri UPN Veteran Jawa Timur</li>
+          <li>2007-2013       : SDN Purwotengah 2 Kota Mojokerto</li>
+          <li>2013-2016       : SMPN 2 Mojokerto</li>
+          <li>2016-2019       : SMAN 1 Sooko Mojokerto</li>
+          <li>2019-Sekarang   : S1 Teknik Industri UPN Veteran Jawa Timur</li>
         </ul>
         <h2 align="center" class="kontak"> Kontak Saya</h2>
         <p><a href="https://instagram.com/nuarita_kartika?igshid=YmMyMTA2M2Y=">Instagram</a></p>
