Edit menjadi Biodata

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
         </div>
 
-        <h1 align="center" class="judul"> Biodata</h1>
+        <h1 align="center" class="judul"> BIODATA </h1>
         <center><img class="gambar" src="Nuarita_.jpg" height="180" width="140"></center>
         <h2 align="center" class="tentang">Tentang Saya</h2>
         <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri.</p>
