penambahan contact me

--- a/portofolio.html
+++ b/portofolio.html
@@ -14,10 +14,11 @@
     <style>
         .nav ul {
           list-style-type: none;
-          margin: 0;
+          margin: 0px;
           padding: 0;
           overflow: hidden;
           background-color: rgb(255, 255, 255);
+          box-shadow: 7px, 7px;
         }
         
         .nav li {
@@ -30,6 +31,7 @@
           text-align: center;
           padding: 14px 16px;
           text-decoration: none;
+          font-weight: bold;
         }
         
         .nav li a:hover {
@@ -50,7 +52,7 @@
         <ul>
             <li><a href="index.html">Biodata</a></li>
             <li><a href="">Portofolio</a></li>
-            <li><a href="">Contact Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
         </div>
 
