--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           text-align: center;
           padding: 14px 16px;
           text-decoration: none;
+          font-weight: bold;
         }
         
         .nav li a:hover {
@@ -51,7 +52,7 @@
         <ul>
             <li><a href="">Biodata</a></li>
             <li><a href="portofolio.html">Portofolio</a></li>
-            <li><a href="">Contact Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
         </div>
 
