--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
         <body>
         <div class="nav"> 
         <ul>
-            <li><a href="">Biodata</a></li>
+            <li><a href="index.html">Biodata</a></li>
             <li><a href="portofolio.html">Portofolio</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="">Contact Me</a></li>
         </ul>
         </div>
 
