--- a/portofolio.html
+++ b/portofolio.html
@@ -14,7 +14,7 @@
     <style>
         .nav ul {
           list-style-type: none;
-          margin: 0px;
+          margin: 0;
           padding: 0;
           overflow: hidden;
           background-color: rgb(255, 255, 255);
