--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>website nuarita</title>
+    <title>index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -23,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Biodata</a>
+            <a class="nav-link" href="biodata.html">Biodata</a>
             <a class="nav-link" href="#">Portofolio</a>
             <a class="nav-link" href="#">Contact Me</a>
           </div>
@@ -39,11 +42,9 @@
 </div>
 
 <div class="container">
-  <h2>About Me</h2>
-  <p align="justify">Halo, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Pada saat ini saya mengikuti kegiatan Studi Independen di SEAL. Kegiatan ini akan berlangsung selama satu semester, dimana dimulai pada bulan agustus sampai desember. Dalam kegiatan tersebut bertemakan "Digital Transformation in The Government and Public Sector". Banyak juga materi yang akan dipelajari, mulai dari Transformasi Digital, materi Hacker, materi Smart City, T-Shape Skill, Cloud Computing, Design Thinking dan Design Sprint, Agile dan Scrum, Lean Canvas dan BMC, kemudian diakhir pembelajaran ini akan diadakan Final Project. </p>
+  <h2 class="text-center fw-bold mb-3">About Me</h2>
+  <p class="text-about text-secondary lh-lg">Perkenalkan, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Pada saat ini saya mengikuti kegiatan Studi Independen di SEAL. Kegiatan ini akan berlangsung selama satu semester, dimana dimulai pada bulan agustus sampai desember. Dalam kegiatan tersebut bertemakan "Digital Transformation in The Government and Public Sector". Banyak juga materi yang akan dipelajari, mulai dari Transformasi Digital, materi Hacker, materi Smart City, T-Shape Skill, Cloud Computing, Design Thinking dan Design Sprint, Agile dan Scrum, Lean Canvas dan BMC, kemudian diakhir pembelajaran ini akan diadakan Final Project. </p>
 </div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
