--- a/biodata.html
+++ b/biodata.html
@@ -28,8 +28,8 @@
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
               <a class="nav-link active" href="biodata.html">Biodata</a>
-              <a class="nav-link" href="#">Portofolio</a>
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="portofolio.html">Portofolio</a>
+              <a class="nav-link" href="contact.html">Contact Me</a>
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
     </div>
     <div class="col-3">
         <div class="card">
-            <img src="programmer.png" class="card-img-top" alt="">
+            <img src="logo canva.png" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title fw-bold">Canva</h5>
               <div class="container d-flex flex-row align-items-center justify-content-center">
