--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="biodata.html">Biodata</a>
-            <a class="nav-link" href="#">Portofolio</a>
-            <a class="nav-link" href="#">Contact Me</a>
+            <a class="nav-link" href="portofolio.html">Portofolio</a>
+            <a class="nav-link" href="contact.html">Contact Me</a>
           </div>
         </div>
       </div>
