penambahan contact me dan ubah background

--- a/portofolio.html
+++ b/portofolio.html
@@ -18,7 +18,7 @@
 </head>
 
     <body>
-        <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #EEF1FF;">
+        <nav class="navbar sticky-top navbar-expand-lg" style="background-color: #EEF1FF;">
             <div class="container">
               <a class="navbar-brand fw-bolder text-dark" href="#">Nuarita Tri Kartika</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
             </table>
         </div>
 
-        <div class="class">
+            <div class="class">
             <h2 class="text-center my-3">Pengalaman Organisasi</h2>
             <table class="table container table-light table-striped">
                 <thead>
@@ -126,22 +126,10 @@
             </table>
         </div>
 
-        <div>
-            <h2 class="text-center my-3">Karakter</h2>
-            <ul class="list-group container">
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Disiplin</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Bertanggung Jawab</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Baik</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Sopan</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Jujur</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Suka akan hal baru</li>
-              </ul>
-        </div>
-
         <div class="container flex-row align-items-center justify-content-center">
             <h2 class="text-center my-3">Keahlian Bahasa</h2>
             <div class="row">
-            <div class="col-3">
+            <div class="col-3 mx-auto">
                 <div class="card">
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Bahasa Indonesia</h5>
@@ -154,7 +142,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 mx-auto">
                 <div class="card">
                     <div class="card-body">
                       <h5 class="card-title fw-bold">Bahasa Inggris</h5>
@@ -167,6 +155,18 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div>
+            <h2 class="text-center my-3">Karakter</h2>
+            <ul class="list-group container">
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Disiplin</li>
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Bertanggung Jawab</li>
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Baik</li>
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Sopan</li>
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Jujur</li>
+                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Suka akan hal baru</li>
+              </ul>
         </div>
 
         <div class="container">
@@ -206,6 +206,23 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-fluid">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+              <div class="col-md-4 d-flex align-items-center">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                  <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+                </a>
+                <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+              </div>
+          
+              <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                <li class="ms-3"><a class="text-muted" href="https://instagram.com/nuarita_kartika?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/nuarita-tri-kartika-a68b24252/"><i class="bi bi-linkedin"></i></a></li>
+              </ul>
+            </footer>
+          </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
