--- a/biodata.html
+++ b/biodata.html
@@ -136,7 +136,7 @@
         <div class="card">
             <img src="mahasiswa.png" class="card-img-top-1" alt="">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Mahasiswa UPN Veteran Jawa Timur</h5>
+              <h5 class="card-title fw-bold">Mahasiswa Teknik Industri UPNV Jatim</h5>
               <p class="card-text">2019-Sekarang</p>
             </div>
           </div>
