--- a/portofolio.html
+++ b/portofolio.html
@@ -44,7 +44,7 @@
 
         <div class="class">
             <h2 class="text-center mb-3">Data Diri</h2>
-            <table class="table container">
+            <table class="table container table-stripe table-sm border-primary">
                   <tbody>
                     <tr>
                       <td>Nama</td>
@@ -79,6 +79,49 @@
                 </tbody>
             </table>
         </div>
+
+        <div>
+          <h2 class="text-center my-3">Karakter</h2>
+          <ul class="list-border-color-primary container">
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Disiplin</li>
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Bertanggung Jawab</li>
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Baik</li>
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Sopan</li>
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Jujur</li>
+              <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Suka akan hal baru</li>
+            </ul>
+        </div>
+
+        <div class="container flex-row align-items-center justify-content-center">
+          <h2 class="text-center my-3">Keahlian Bahasa</h2>
+          <div class="row">
+          <div class="col-3 mx-auto">
+              <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold">Bahasa Indonesia</h5>
+                    <div class="container d-flex flex-row align-items-center justify-content-center">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>             
+                    </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-3 mx-auto">
+              <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bold">Bahasa Inggris</h5>
+                    <div class="container d-flex flex-row align-items-center justify-content-center">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>             
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </div>
 
             <div class="class">
             <h2 class="text-center my-3">Pengalaman Organisasi</h2>
@@ -126,49 +169,6 @@
             </table>
         </div>
 
-        <div class="container flex-row align-items-center justify-content-center">
-            <h2 class="text-center my-3">Keahlian Bahasa</h2>
-            <div class="row">
-            <div class="col-3 mx-auto">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title fw-bold">Bahasa Indonesia</h5>
-                      <div class="container d-flex flex-row align-items-center justify-content-center">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>             
-                      </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3 mx-auto">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title fw-bold">Bahasa Inggris</h5>
-                      <div class="container d-flex flex-row align-items-center justify-content-center">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-half"></i>             
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div>
-            <h2 class="text-center my-3">Karakter</h2>
-            <ul class="list-group container">
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Disiplin</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Bertanggung Jawab</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Baik</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Sopan</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Jujur</li>
-                <li class="list-group-item"><i class="bi bi-balloon-heart-fill"></i>Suka akan hal baru</li>
-              </ul>
-        </div>
-
         <div class="container">
             <h2 class="text-center my-3">Hobi</h2>
                 <div class="row">
@@ -208,7 +208,7 @@
         </div>
 
         <div class="container-fluid">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark">
               <div class="col-md-4 d-flex align-items-center">
                 <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                   <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
