--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <p class="text-about text-secondary lh-lg">Perkenalkan, saya Nuarita Tri Kartika, biasa dipanggil Nuarita. Asal saya dari Kabupaten Sidoarjo, dengan alamat lengkap di Kramat Temenggung No.39 Kecamatan Tarik Kabupaten Sidoarjo. Saya merupakan mahasiswi semester 7 di Universitas Pembangunan Nasional Veteran Jawa Timur dengan program studi Teknik Industri. Pada saat ini saya mengikuti kegiatan Studi Independen di SEAL. Kegiatan ini akan berlangsung selama satu semester, dimana dimulai pada bulan agustus sampai desember. Dalam kegiatan tersebut bertemakan "Digital Transformation in The Government and Public Sector". Banyak juga materi yang akan dipelajari, mulai dari Transformasi Digital, materi Hacker, materi Smart City, T-Shape Skill, Cloud Computing, Design Thinking dan Design Sprint, Agile dan Scrum, Lean Canvas dan BMC, kemudian diakhir pembelajaran ini akan diadakan Final Project. </p>
 </div>
 
-<div class="container-fluid">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
@@ -61,6 +61,7 @@
     </ul>
   </footer>
 </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
